Fix keyboard overflow.

--- a/src/style.scss
+++ b/src/style.scss
@@ -203,7 +203,7 @@ body {
     border-radius: var(--app-border-radius);
     padding: var(--app-border-padding);
     display: grid;
-    grid-template-rows: 4em auto 1fr 132px;
+    grid-template-rows: 4em auto 1fr auto;
 }
 
 .app-container-info {
